--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -145,6 +145,29 @@
         <item>EMERGENCY</item>
     </string-array>
 
+    <string-array name="afiliasi_usaha">
+        <item>JARINGAN</item>
+        <item>INDIVIDUAL</item>
+    </string-array>
+
+    <string-array name="tipe_schedule">
+        <item>OPERASIONAL</item>
+        <item>LAYANAN BOOKING</item>
+        <item>LAYANAN HOME SERVICES</item>
+        <item>LAYANAN EMERGENCY</item>
+    </string-array>
+
+    <string-array name="ya_tidak">
+        <item>TIDAK</item>
+        <item>YA</item>
+    </string-array>
+
+    <string-array name="layanan_tambahan">
+        <item>HOME</item>
+        <item>ANTAR - JEMPUT</item>
+        <item>EMERGENCY</item>
+    </string-array>
+
     <string-array name="lokasi_penugasan">
         <item>BENGKEL</item>
         <item>TENDA</item>
@@ -219,5 +242,41 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="tanggal">Tanggal</string>
+    <string name="discount">Discount</string>
+    <string name="pekerjaan">Pekerjaan</string>
+    <string name="kategori_part">Kategori Part</string>
+    <string name="kategori_part_uppercase">KATEGORI PART</string>
+    <string name="hapus_uppercase">HAPUS</string>
+    <string name="simpan_uppercase">SIMPAN</string>
+    <string name="penggunaan_uppercase">PENGGUNAAN</string>
+    <string name="lanjut_uppercase">LANJUT</string>
+    <string name="jumlah_uppercase">JUMLAH</string>
+    <string name="upah_minimum_kota_uppercase">UPAH MINIMUM KOTA</string>
+    <string name="nama_bengkel_uppercase">NAMA BENGKEL</string>
+    <string name="nama_badan_usaha_uppercase">NAMA BADAN USAHA</string>
+    <string name="alamat_uppercase">ALAMAT</string>
+    <string name="kota_kabupaten_uppercase">KOTA / KABUPATEN</string>
+    <string name="nib_uppercase">NIB</string>
+    <string name="no_telp_uupercase">NO. TELP</string>
+    <string name="npwp_uppercase">NPWP</string>
+    <string name="nama_jaringan_uppercase">NAMA JARINGAN</string>
+    <string name="jenis_kendaraan_uppercase">JENIS KENDARAAN</string>
+    <string name="bidang_usaha_uppercase">BIDANG USAHA</string>
+    <string name="jumlah_user_uppercase">JUMLAH USER</string>
+    <string name="fasilitas_pelanggan_uppercase">FASILITAS PELANGGAN *</string>
+    <string name="booking_uppercase">BOOKING</string>
+    <string name="layanan_tambahan_uppercase">LAYANAN TAMBAHAN</string>
+    <string name="home">HOME</string>
+    <string name="jemput">JEMPUT</string>
+    <string name="emergency">EMERGENCY</string>
+    <string name="kapasitas_simpan">KAPASITAS SIMPAN</string>
+    <string name="tipe_schedule">TIPE SCHEDULE</string>
+    <string name="senin_jumat">SENIN - JUMAT</string>
+    <string name="jumat">JUMAT</string>
+    <string name="sabtu">SABTU</string>
+    <string name="libur">LIBUR</string>
+    <string name="minggu">MINGGU</string>
+    <string name="format_jam">HH:MM</string>
 
 </resources>
