--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,11 +16,6 @@
 
     </string-array>
 
-    <string-array name="pekerjaan_bengkel">
-        <item>SERVICE KECIL</item>
-        <item>SERVICE BESAR</item>
-    </string-array>
-
     <string-array name="penjualan_part">
         <item>KENDARAAN</item>
         <item>GROSIR</item>
@@ -155,6 +150,7 @@
         <item>LAYANAN BOOKING</item>
         <item>LAYANAN HOME SERVICES</item>
         <item>LAYANAN EMERGENCY</item>
+        <item></item>
     </string-array>
 
     <string-array name="ya_tidak">
@@ -242,7 +238,6 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="tanggal">Tanggal</string>
     <string name="discount">Discount</string>
     <string name="pekerjaan">Pekerjaan</string>
     <string name="kategori_part">Kategori Part</string>
@@ -278,5 +273,18 @@
     <string name="libur">LIBUR</string>
     <string name="minggu">MINGGU</string>
     <string name="format_jam">HH:MM</string>
+    <string name="tanggal">Tanggal</string>
+    <string name="no_polisi">No. Polisi</string>
+    <string name="layanan">Layanan</string>
+    <string name="no_ponsel">No. Ponsel</string>
+    <string name="mekanik">Mekanik</string>
+    <string name="harga">Harga</string>
+    <string name="status">Status</string>
+    <string name="nama_part">Nama Part</string>
+    <string name="no_part">No. Part</string>
+    <string name="jumlah_jumlah">Jumlah / Jumlah</string>
+    <string name="no_polisi_uppercase">NO. POLISI</string>
+    <string name="pelanggan_uppercase">PELANGGAN</string>
+    <string name="mekanik_uppercase">MEKANIK</string>
 
 </resources>
