--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -367,4 +367,11 @@
     <string name="jenis_kendaraan_lowercase">Jenis Kendaraan</string>
     <string name="nn_n_dp_uppercase">NN.N% DP</string>
     <string name="sisa_biaya_uppercase">SISA BIAYA</string>
+    <string name="merc_disc_rate_uppercase">MERC. DISC RATE</string>
+    <string name="rp">Rp</string>
+    <string name="percent">%</string>
+    <string name="tujuan_reminder_uppercase">TUJUAN REMINDER</string>
+    <string name="pemilik_uppercase">PEMILIK</string>
+    <string name="checkout_uppercase">CHECKOUT</string>
+    <string name="print_bukti_uppercase">PRINT BUKTI</string>
 </resources>
