--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -378,4 +378,5 @@
     <string name="pengambilan_uppercase">PENGAMBILAN</string>
     <string name="point_layanan_uppercase">POINT LAYANAN</string>
     <string name="keluhan_uppercase">KELUHAN</string>
+    <string name="nama_pelanggan_nama_usaha">Nama Pelanggan / Nama Usaha</string>
 </resources>
