--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -379,4 +379,5 @@
     <string name="point_layanan_uppercase">POINT LAYANAN</string>
     <string name="keluhan_uppercase">KELUHAN</string>
     <string name="nama_pelanggan_nama_usaha">Nama Pelanggan / Nama Usaha</string>
+    <string name="sisa_waktu_uppercase">SISA WAKTU</string>
 </resources>
