--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -367,7 +367,7 @@
     </string-array>
     <string-array name="tipe_collection">
         <item>CASH</item>
-        <item>SETOR CASH</item>
+        <item>SETOR TUNAI</item>
     </string-array>
     <string-array name="harga_jual_part">
         <item>FIX</item>
