--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -137,7 +137,7 @@
     <string name="discount_part_uppercase">DISCOUNT PART</string>
     <string name="discount_jasa_uppercase">DISCOUNT JASA</string>
     <string name="jenis_kendaraan_lowercase">Jenis Kendaraan</string>
-    <string name="nn_n_dp_uppercase">NN.N% DP</string>
+    <string name="nn_n_dp_uppercase">%DP</string>
     <string name="sisa_biaya_uppercase">SISA BIAYA</string>
     <string name="merc_disc_rate_uppercase">MDR</string>
     <string name="rp">Rp</string>
