--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -160,6 +160,7 @@
     <string name="sisa_waktu_uppercase">SISA WAKTU</string>
     <string name="nama_bank_uppercase">NAMA BANK</string>
     <string name="lkk_claim_uppercase">LKK CLAIM</string>
+    <string name="tambah_part_uppercase">TAMBAH PART</string>
     <string-array name="pola_harga_jual">
         <item>FLEXIBLE</item>
         <item>BELI + MARGIN</item>
