--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -162,6 +162,9 @@
     <string name="lkk_claim_uppercase">LKK CLAIM</string>
     <string name="tambah_part_uppercase">TAMBAH PART</string>
     <string name="catatan_mekanik_uppercase">CATATAN MEKANIK</string>
+    <string name="tipe_jasa_uppercase">TIPE JASA</string>
+    <string name="komisi_percent_uppercase">KOMISI %</string>
+    <string name="total_komisi_percent">TOTAL KOMISI %</string>
     <string-array name="pola_harga_jual">
         <item>FLEXIBLE</item>
         <item>BELI + MARGIN</item>
