--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,8 @@
 
     <string name="layanan_tambahan_uppercase">LAYANAN TAMBAHAN</string>
 
+    <string name="layanan_uppercase">LAYANAN</string>
+
     <string name="home">HOME</string>
 
     <string name="jemput">JEMPUT</string>
