--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -215,6 +215,9 @@
     <string name="periode_uppercase">PERIODE</string>
     <string name="tampilkan_uppercase">TAMPILKAN</string>
     <string name="dd_mm_yy_uppercase">DD/MM/YY</string>
+    <string name="hari_uppercase">HARI</string>
+    <string name="default_number">NNN</string>
+    <string name="jasa_part_uppercase">JASA PART</string>
     <string-array name="pola_harga_jual">
         <item>FLEXIBLE</item>
         <item>BELI + MARGIN</item>
